# RAG-document-chatbot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: main.py  rag_pipeline.py
frontend/: app.py
frontend/pages/: arxiv_search_engine.py  chat_assistant.py
notebook/: rag_workflow.ipynb
